--- a/source/RockawayWish.Web/Web.config
+++ b/source/RockawayWish.Web/Web.config
@@ -25,7 +25,7 @@
 
     <!-- Set Forms Authentication -->
     <authentication mode="Forms">
-      <forms protection="All" requireSSL="true" defaultUrl="~/signin" cookieless="UseCookies" slidingExpiration="true" timeout="4320" />
+      <forms protection="All" requireSSL="true" defaultUrl="~/" loginUrl="~/signin" cookieless="UseCookies" slidingExpiration="true" timeout="4320" />
     </authentication>
 
   </system.web>
