--- a/source/RockawayWish.Web/app.config
+++ b/source/RockawayWish.Web/app.config
@@ -28,8 +28,8 @@
 
   <add key="ResetPassword-Endpoint" value="https://local.rockawaywish.org/resetpassword" />
   <add key="ResetPassword-Subject" value="Forget your password at rockawaywish.org?" />
-  <add key="ResetPassword-ContactLink" value="https://local.rockawaywish.org/contact-wish" />
+  <add key="ContactUsLink" value="https://local.rockawaywish.org/contact-wish" />
 
-  <add key="PayPal-2016-DuesId" value="T844VV3P9R2JW" />
+  <add key="PayPal-Donate-Button-Id" value="TPYZYJWF4DDJW" />
 
 </appSettings>
