--- a/source/RockawayWish.Web/Web.prod.config
+++ b/source/RockawayWish.Web/Web.prod.config
@@ -27,7 +27,7 @@
 
     <!-- Set Forms Authentication -->
     <authentication mode="Forms">
-      <forms protection="All" requireSSL="true" cookieless="UseCookies" slidingExpiration="true" timeout="4320" />
+      <forms protection="All" requireSSL="true" defaultUrl="~/" loginUrl="~/signin" cookieless="UseCookies" slidingExpiration="true" timeout="4320" />
     </authentication>
 
   </system.web>
