--- a/source/RockawayWish.Web/app.config
+++ b/source/RockawayWish.Web/app.config
@@ -14,7 +14,7 @@
 
 
   <add key="Membership-Admin-Url" value="https://local.admin.interactivemembership.tiradointeractive.com" />
-  <add key="Membership-Admin-Email" value="richie@tiradointeractive.com" />
+  <add key="Membership-Admin-Email" value="richie@tiradointeractive.com;richie@nightagency.com" />
   <add key="Membership-Admin-Name" value="Richard Tirado" />
 
   <add key="SMTP-Host" value="smtp.gmail.com" />
