--- a/source/RockawayWish.Web/app.prod.config
+++ b/source/RockawayWish.Web/app.prod.config
@@ -27,7 +27,10 @@
 
   <add key="ResetPassword-Endpoint" value="https://rockawaywish.org/resetpassword" />
   <add key="ResetPassword-Subject" value="Forget your password at rockawaywish.org?" />
-  <add key="ContactUsLink" value="https://rockawaywish.org/contact-wish" />
+
+  <add key="ContactUs-Url" value="https://rockawaywish.org/contact-wish" />
+  <add key="ContactUs-Email" value="info@rockawaywish.org" />
+
 
   <add key="PayPal-Donate-Button-Id" value="TPYZYJWF4DDJW" />
 </appSettings>
