--- a/source/RockawayWish.Web/Web.config
+++ b/source/RockawayWish.Web/Web.config
@@ -68,16 +68,7 @@
     </httpProtocol>
 
     <rewrite>
-      <rules>
-        <clear />
-        <rule name="HTTP to HTTPS" stopProcessing="true">
-          <match url="(.*)" />
-          <conditions>
-            <add input="{HTTPS}" pattern="off" ignoreCase="true" />
-          </conditions>
-          <action type="Redirect" redirectType="Found" url="https://{HTTP_HOST}/{R:1}" />
-        </rule>
-      </rules>
+      <rules configSource="rewriteRules.config" />
     </rewrite>
 
   </system.webServer>
