--- a/source/RockawayWish.Web/app.config
+++ b/source/RockawayWish.Web/app.config
@@ -14,7 +14,7 @@
 
 
   <add key="Membership-Admin-Url" value="https://local.admin.interactivemembership.tiradointeractive.com" />
-  <add key="Membership-Admin-Email" value="richie@tiradointeractive.com;richie@nightagency.com" />
+  <add key="Membership-Admin-Email" value="richie@tiradointeractive.com" />
   <add key="Membership-Admin-Name" value="Richard Tirado" />
 
   <add key="SMTP-Host" value="smtp.gmail.com" />
@@ -28,7 +28,9 @@
 
   <add key="ResetPassword-Endpoint" value="https://local.rockawaywish.org/resetpassword" />
   <add key="ResetPassword-Subject" value="Forget your password at rockawaywish.org?" />
-  <add key="ContactUsLink" value="https://local.rockawaywish.org/contact-wish" />
+
+  <add key="ContactUs-Url" value="https://local.rockawaywish.org/contact-wish" />
+  <add key="ContactUs-Email" value="richie@tiradointeractive.com" />
 
   <add key="PayPal-Donate-Button-Id" value="TPYZYJWF4DDJW" />
 
