--- a/source/RockawayWish.Web/app.prod.config
+++ b/source/RockawayWish.Web/app.prod.config
@@ -26,7 +26,7 @@
   <add key="SMTP-UseDefaultCredentials" value="false" />
 
   <add key="ResetPassword-Endpoint" value="https://rockawaywish.org/resetpassword" />
-  <add key="ResetPassword-Subject" value="Forget your password at rockawaywish.org?" />
+  <add key="ResetPassword-Subject" value="Forgot your password at rockawaywish.org?" />
 
   <add key="ContactUs-Url" value="https://rockawaywish.org/contact-wish" />
   <add key="ContactUs-Email" value="info@rockawaywish.org" />
