--- a/source/RockawayWish.Web/app.config
+++ b/source/RockawayWish.Web/app.config
@@ -27,7 +27,7 @@
   <add key="SMTP-UseDefaultCredentials" value="false" />
 
   <add key="ResetPassword-Endpoint" value="https://local.rockawaywish.org/resetpassword" />
-  <add key="ResetPassword-Subject" value="Forget your password at rockawaywish.org?" />
+  <add key="ResetPassword-Subject" value="Forgot your password at rockawaywish.org?" />
 
   <add key="ContactUs-Url" value="https://local.rockawaywish.org/contact-wish" />
   <add key="ContactUs-Email" value="richie@tiradointeractive.com" />
