--- a/source/RockawayWish.Web/app.config
+++ b/source/RockawayWish.Web/app.config
@@ -17,6 +17,9 @@
   <add key="Membership-Admin-Email" value="richie@tiradointeractive.com" />
   <add key="Membership-Admin-Name" value="Richard Tirado" />
 
+  <add key="Membership-Audit-Email" value="richie@tiradointeractive.com" />
+  <add key="Membership-Audit-Name" value="WISH of Rockaway Membership Audit" />
+
   <add key="SMTP-Host" value="smtp.gmail.com" />
   <add key="SMTP-UserName" value="info@rockawaywish.org" />
   <add key="SMTP-Password" value="Rockaway1*" />
@@ -32,6 +35,7 @@
   <add key="ContactUs-Url" value="https://local.rockawaywish.org/contact-wish" />
   <add key="ContactUs-Email" value="richie@tiradointeractive.com" />
 
-  <add key="PayPal-Donate-Button-Id" value="TPYZYJWF4DDJW" />
+  <add key="PayPal-Donate-Button-Id" value="H3FY3ZAHZDHUQ" />
+  <add key="Donation-PaymentId" value="02772dae-371e-40e8-b8fc-afed0cde9c24" />
 
 </appSettings>
