--- a/source/RockawayWish.Web/app.prod.config
+++ b/source/RockawayWish.Web/app.prod.config
@@ -16,6 +16,9 @@
   <add key="Membership-Admin-Email" value="richie@tiradointeractive.com" />
   <add key="Membership-Admin-Name" value="Richard Tirado" />
 
+  <add key="Membership-Audit-Email" value="richie@tiradointeractive.com" />
+  <add key="Membership-Audit-Name" value="WISH of Rockaway Membership Audit" />
+
   <add key="SMTP-Host" value="smtp.gmail.com" />
   <add key="SMTP-UserName" value="info@rockawaywish.org" />
   <add key="SMTP-Password" value="Rockaway1*" />
@@ -33,4 +36,5 @@
 
 
   <add key="PayPal-Donate-Button-Id" value="TPYZYJWF4DDJW" />
+  <add key="Donation-PaymentId" value="02772dae-371e-40e8-b8fc-afed0cde9c24" />
 </appSettings>
