--- a/source/RockawayWish.Web/app.prod.config
+++ b/source/RockawayWish.Web/app.prod.config
@@ -16,7 +16,7 @@
   <add key="Membership-Admin-Email" value="richie@tiradointeractive.com" />
   <add key="Membership-Admin-Name" value="Richard Tirado" />
 
-  <add key="Membership-Audit-Email" value="richie@tiradointeractive.com" />
+  <add key="Membership-Audit-Email" value="richie@tiradointeractive.com;kdonohue1@aol.com" />
   <add key="Membership-Audit-Name" value="WISH of Rockaway Membership Audit" />
 
   <add key="SMTP-Host" value="smtp.gmail.com" />
