--- a/source/RockawayWish.Web/app.config
+++ b/source/RockawayWish.Web/app.config
@@ -17,7 +17,7 @@
   <add key="Membership-Admin-Email" value="richie@tiradointeractive.com" />
   <add key="Membership-Admin-Name" value="Richard Tirado" />
 
-  <add key="Membership-Audit-Email" value="richie@tiradointeractive.com" />
+  <add key="Membership-Audit-Email" value="richie@tiradointeractive.com;richie@nightagency.com" />
   <add key="Membership-Audit-Name" value="WISH of Rockaway Membership Audit" />
 
   <add key="SMTP-Host" value="smtp.gmail.com" />
