--- a/source/RockawayWish.Web/app.prod.config
+++ b/source/RockawayWish.Web/app.prod.config
@@ -16,7 +16,7 @@
   <add key="Membership-Admin-Email" value="richie@tiradointeractive.com" />
   <add key="Membership-Admin-Name" value="Richard Tirado" />
 
-  <add key="Membership-Audit-Email" value="richie@tiradointeractive.com;kdonohue1@aol.com" />
+  <add key="Membership-Audit-Email" value="richie@tiradointeractive.com;kdonohue@rockawaywish.org" />
   <add key="Membership-Audit-Name" value="WISH of Rockaway Membership Audit" />
 
   <add key="SMTP-Host" value="smtp.gmail.com" />
@@ -35,6 +35,6 @@
   <add key="ContactUs-Email" value="info@rockawaywish.org" />
 
 
-  <add key="PayPal-Donate-Button-Id" value="TPYZYJWF4DDJW" />
+  <add key="PayPal-Donate-Button-Id" value="TVMJWZPW36NKU" />
   <add key="Donation-PaymentId" value="02772dae-371e-40e8-b8fc-afed0cde9c24" />
 </appSettings>
