Photo Gallery updates

--- a/source/RockawayWish.Web/app.prod.config
+++ b/source/RockawayWish.Web/app.prod.config
@@ -37,4 +37,7 @@
 
   <add key="PayPal-Donate-Button-Id" value="TVMJWZPW36NKU" />
   <add key="Donation-PaymentId" value="02772dae-371e-40e8-b8fc-afed0cde9c24" />
+
+  <add key="Instagram-Access-Token" value="962927527.1677ed0.bb19ee0f9910468b83e40b68071c3a48" />
+
 </appSettings>
