--- a/source/RockawayWish.Web/app.config
+++ b/source/RockawayWish.Web/app.config
@@ -8,7 +8,7 @@
 
   <add key="Interactive-Membership-ApiKey" value="7f9b603a-a2ac-4373-a069-c0d20c29843a" />
   <add key="Interactive-Membership-AppId" value="13A6F14D-7B2B-4266-AB7D-A11DF2AFEB07" />
-  <add key="Interactive-Membership-Endpoint" value="https://interactivemembership.tiradointeractive.com" />
+  <add key="Interactive-Membership-Endpoint" value="http://local.interactivemembership.tiradointeractive.com" />
   <!-- real admin key -->
   <!--<add key="Interactive-Membership-AdminKey" value="4183CD09-7072-4453-B0EC-1092130A3760" />-->
 
