--- a/source/RockawayWish.Web/app.prod.config
+++ b/source/RockawayWish.Web/app.prod.config
@@ -32,7 +32,7 @@
   <add key="ResetPassword-Subject" value="Forgot your password at rockawaywish.org?" />
 
   <add key="ContactUs-Url" value="https://rockawaywish.org/contact-wish" />
-  <add key="ContactUs-Email" value="info@rockawaywish.org;kdonohue@rockawaywish.org" />
+  <add key="ContactUs-Email" value="info@rockawaywish.org;kdonohue@rockawaywish.org;richie@tiradointeractive.com" />
 
 
   <add key="PayPal-Donate-Button-Id" value="TVMJWZPW36NKU" />
