--- a/source/RockawayWish.Web/app.prod.config
+++ b/source/RockawayWish.Web/app.prod.config
@@ -35,7 +35,7 @@
   <add key="ContactUs-Email" value="info@rockawaywish.org;kdonohue@rockawaywish.org;richie@tiradointeractive.com" />
 
 
-  <add key="PayPal-Donate-Button-Id" value="TVMJWZPW36NKU" />
+  <add key="PayPal-Donate-Button-Id" value="TPYZYJWF4DDJW" />
   <add key="Donation-PaymentId" value="02772dae-371e-40e8-b8fc-afed0cde9c24" />
 
   <add key="Instagram-Access-Token" value="962927527.1677ed0.bb19ee0f9910468b83e40b68071c3a48" />
