--- a/source/RockawayWish.Web/app.config
+++ b/source/RockawayWish.Web/app.config
@@ -8,12 +8,12 @@
 
   <add key="Interactive-Membership-ApiKey" value="7f9b603a-a2ac-4373-a069-c0d20c29843a" />
   <add key="Interactive-Membership-AppId" value="13A6F14D-7B2B-4266-AB7D-A11DF2AFEB07" />
-  <add key="Interactive-Membership-Endpoint" value="http://local.interactivemembership.tiradointeractive.com" />
+  <add key="Interactive-Membership-Endpoint" value="https://interactivemembership-local.tiradointeractive.com" />
   <!-- real admin key -->
   <!--<add key="Interactive-Membership-AdminKey" value="4183CD09-7072-4453-B0EC-1092130A3760" />-->
 
 
-  <add key="Membership-Admin-Url" value="https://local.admin.interactivemembership.tiradointeractive.com" />
+  <add key="Membership-Admin-Url" value="https://interactivemembershipadmin-local.tiradointeractive.com" />
   <add key="Membership-Admin-Email" value="richie@tiradointeractive.com" />
   <add key="Membership-Admin-Name" value="Richard Tirado" />
 
@@ -29,10 +29,10 @@
   <add key="SMTP-EnableSSL" value="true" />
   <add key="SMTP-UseDefaultCredentials" value="false" />
 
-  <add key="ResetPassword-Endpoint" value="https://local.rockawaywish.org/resetpassword" />
+  <add key="ResetPassword-Endpoint" value="https://rockawaywish-local.tiradointeractive.com/resetpassword" />
   <add key="ResetPassword-Subject" value="Forgot your password at rockawaywish.org?" />
 
-  <add key="ContactUs-Url" value="https://local.rockawaywish.org/contact-wish" />
+  <add key="ContactUs-Url" value="https://rockawaywish-local.tiradointeractive.com/contact-wish" />
   <add key="ContactUs-Email" value="richie@tiradointeractive.com" />
 
   <add key="PayPal-Donate-Button-Id" value="H3FY3ZAHZDHUQ" />
