--- a/source/RockawayWish.Web/RockawayWish.Web.csproj
+++ b/source/RockawayWish.Web/RockawayWish.Web.csproj
@@ -102,6 +102,9 @@
       <Private>True</Private>
       <HintPath>..\packages\Microsoft.AspNet.WebPages.3.2.2\lib\net45\System.Web.WebPages.Razor.dll</HintPath>
     </Reference>
+    <Reference Include="tiradointeractive.Services">
+      <HintPath>..\Dependencies\tiradointeractive.Services.dll</HintPath>
+    </Reference>
     <Reference Include="WebGrease">
       <Private>True</Private>
       <HintPath>..\packages\WebGrease.1.5.2\lib\WebGrease.dll</HintPath>
@@ -176,12 +179,15 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\HTTPHelper.cs" />
     <Compile Include="Models\MembersViewModels.cs" />
     <Compile Include="Models\ContactViewModel.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\PhotoGalleryVM.cs" />
     <Compile Include="Models\UserPaymentsViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\ISiteRepository.cs" />
+    <Compile Include="Repositories\SiteRepository.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -234,7 +240,9 @@
     <Content Include="Content\images\prettyPhoto\light_square\default_thumbnail.gif" />
     <Content Include="Content\images\prettyPhoto\light_square\loader.gif" />
     <Content Include="Content\images\prettyPhoto\light_square\sprite.png" />
+    <Content Include="Content\images\slider\slide2.jpg" />
     <Content Include="Content\images\slider\slide4.jpg" />
+    <Content Include="Content\images\slider\slide5.jpg" />
     <Content Include="favicon.ico" />
     <Content Include="Content\fonts\fontawesome-webfont.svg" />
     <Content Include="Content\fonts\glyphicons-halflings-regular.svg" />
@@ -250,8 +258,6 @@
     <Content Include="Content\images\logo.png" />
     <Content Include="Content\images\slider\slide1.jpg" />
     <Content Include="Content\images\slider\slide3.jpg" />
-    <Content Include="Content\images\slider\slide2.jpg" />
-    <Content Include="Content\images\slider\slide5.jpg" />
     <Content Include="js\bootstrap.js" />
     <Content Include="js\bootstrap.min.js" />
     <Content Include="js\html5shiv.js" />
@@ -286,7 +292,6 @@
     </Content>
     <Content Include="js\jquery-1.10.2.min.map" />
     <Content Include="Views\Account\RegisterConfirmation.cshtml" />
-    <Content Include="Content\pdf\wish-raffles-2016.pdf" />
     <Content Include="Views\Donate\Payment.cshtml" />
     <Content Include="Views\Contact\Index.cshtml" />
     <Content Include="rewriteRules.prod.config" />
@@ -299,6 +304,8 @@
     <Content Include="Views\Members\_UserFields.cshtml" />
     <Content Include="Views\Members\EditProfile.cshtml" />
     <Content Include="Views\Donate\Register.cshtml" />
+    <Content Include="Content\pdf\slide5.pdf" />
+    <Content Include="Content\pdf\slide2.pdf" />
     <None Include="Web.config">
       <SubType>Designer</SubType>
     </None>
