--- a/source/RockawayWish.Web/RockawayWish.Web.csproj
+++ b/source/RockawayWish.Web/RockawayWish.Web.csproj
@@ -306,6 +306,7 @@
     <Content Include="Views\Donate\Register.cshtml" />
     <Content Include="Content\pdf\slide5.pdf" />
     <Content Include="Content\pdf\slide2.pdf" />
+    <Content Include="Views\Shared\_Navigation.cshtml" />
     <None Include="Web.config">
       <SubType>Designer</SubType>
     </None>
