--- a/source/RockawayWishCMS.Web/RockawayWishCMS.Web.csproj
+++ b/source/RockawayWishCMS.Web/RockawayWishCMS.Web.csproj
@@ -1831,6 +1831,10 @@
     <Folder Include="App_Data\" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\RockawayWish.Core\RockawayWish.Core.csproj">
+      <Project>{0b2c0a37-ee17-4885-bfc6-5dc228253127}</Project>
+      <Name>RockawayWish.Core</Name>
+    </ProjectReference>
     <ProjectReference Include="..\RockawayWishCMS.Data\RockawayWishCMS.Data.csproj">
       <Project>{90016871-81cc-48a4-8b06-c6ca6a5ff9ab}</Project>
       <Name>RockawayWishCMS.Data</Name>
