--- a/source/RockawayWish.Core/RockawayWish.Core.csproj
+++ b/source/RockawayWish.Core/RockawayWish.Core.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{90016871-81CC-48A4-8B06-C6CA6A5FF9AB}</ProjectGuid>
+    <ProjectGuid>{0B2C0A37-EE17-4885-BFC6-5DC228253127}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>RockawayWishCMS.Data</RootNamespace>
-    <AssemblyName>RockawayWishCMS.Data</AssemblyName>
+    <RootNamespace>RockawayWish.Core</RootNamespace>
+    <AssemblyName>RockawayWish.Core</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -32,33 +32,19 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="umbraco">
-      <HintPath>..\Dependencies\umbraco.dll</HintPath>
-    </Reference>
-    <Reference Include="Umbraco.Core">
-      <HintPath>..\Dependencies\Umbraco.Core.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Helpers\DynamicObject.cs" />
-    <Compile Include="Helpers\JsonHelper.cs" />
+    <Compile Include="Entities\CarouselEntity.cs" />
+    <Compile Include="Entities\DocumentTypeEnum.cs" />
+    <Compile Include="Entities\HomePageEntity.cs" />
+    <Compile Include="Entities\PagesEntity.cs" />
+    <Compile Include="Entities\WebsiteEntity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repositories\UmbracoRepository.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Models\" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\RockawayWish.Core\RockawayWish.Core.csproj">
-      <Project>{0b2c0a37-ee17-4885-bfc6-5dc228253127}</Project>
-      <Name>RockawayWish.Core</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
