Move cms conn string to app.config

--- a/source/RockawayWish.Web/app.config
+++ b/source/RockawayWish.Web/app.config
@@ -12,6 +12,8 @@
   <!-- real admin key -->
   <!--<add key="Interactive-Membership-AdminKey" value="4183CD09-7072-4453-B0EC-1092130A3760" />-->
 
+  <add key="CMS-Endpoint" value="https://wish-cms.tiradointeractive.com/umbraco/api/site/get/" />
+
 
   <add key="Membership-Admin-Url" value="https://interactivemembershipadmin-local.tiradointeractive.com" />
   <add key="Membership-Admin-Email" value="richie@tiradointeractive.com" />
