--- a/source/RockawayWish.Web/app.prod.config
+++ b/source/RockawayWish.Web/app.prod.config
@@ -6,9 +6,9 @@
   <add key="UnobtrusiveJavaScriptEnabled" value="true" />
 
 
-  <add key="Interactive-Membership-ApiKey" value="7f9b603a-a2ac-4373-a069-c0d20c29843a" />
+  <add key="Interactive-Membership-ApiKey" value="719b603a-a2ac-4373-a069-c0d20c29843a" />
   <add key="Interactive-Membership-AppId" value="13A6F14D-7B2B-4266-AB7D-A11DF2AFEB07" />
-  <add key="Interactive-Membership-Endpoint" value="https://interactivemembership.tiradointeractive.com" />
+  <add key="Interactive-Membership-Endpoint" value="https://interactivemembership-api.tiradointeractive.com" />
   <!-- real admin key -->
   <!--<add key="Interactive-Membership-AdminKey" value="4183CD09-7072-4453-B0EC-1092130A3760" />-->
 
@@ -34,7 +34,7 @@
   <add key="ResetPassword-Subject" value="Forgot your password at rockawaywish.org?" />
 
   <add key="ContactUs-Url" value="https://rockawaywish.org/contact-wish" />
-  <add key="ContactUs-Email" value="info@rockawaywish.org;kdonohue@rockawaywish.org;richie@tiradointeractive.com" />
+  <add key="ContactUs-Email" value="kdonohue@rockawaywish.org;richie@tiradointeractive.com" />
 
 
   <add key="PayPal-Donate-Button-Id" value="TPYZYJWF4DDJW" />
