--- a/source/RockawayWishCMS.Web/RockawayWishCMS.Web.csproj
+++ b/source/RockawayWishCMS.Web/RockawayWishCMS.Web.csproj
@@ -19,6 +19,8 @@
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
     <IISExpressUseClassicPipelineMode />
+    <Use64BitIISExpress />
+    <UseGlobalApplicationHostFile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -38,6 +40,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AutoMapper">
+      <HintPath>..\Dependencies\umbraco\AutoMapper.dll</HintPath>
+    </Reference>
+    <Reference Include="businesslogic">
+      <HintPath>..\Dependencies\umbraco\businesslogic.dll</HintPath>
+    </Reference>
     <Reference Include="ClientDependency.Core">
       <HintPath>..\Dependencies\umbraco\ClientDependency.Core.dll</HintPath>
     </Reference>
@@ -62,6 +70,9 @@
     </Reference>
     <Reference Include="Log4Net.Async">
       <HintPath>..\Dependencies\umbraco\Log4Net.Async.dll</HintPath>
+    </Reference>
+    <Reference Include="Lucene.Net">
+      <HintPath>..\Dependencies\umbraco\Lucene.Net.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.AspNet.Identity.Core">
       <HintPath>..\Dependencies\umbraco\Microsoft.AspNet.Identity.Core.dll</HintPath>
@@ -95,6 +106,9 @@
     <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Dependencies\umbraco\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="Owin">
+      <HintPath>..\Dependencies\umbraco\Owin.dll</HintPath>
     </Reference>
     <Reference Include="Semver">
       <HintPath>..\Dependencies\umbraco\Semver.dll</HintPath>
@@ -1819,6 +1833,12 @@
     <Content Include="Views\Partials\Grid\Editors\Rte.cshtml" />
     <Content Include="Views\Partials\Grid\Editors\Textstring.cshtml" />
     <Content Include="Views\Web.config" />
+    <Content Include="app.config">
+      <SubType>Designer</SubType>
+    </Content>
+    <Content Include="connectionStrings.config">
+      <SubType>Designer</SubType>
+    </Content>
     <None Include="Properties\PublishProfiles\rockawaywishcms-local.tiradointeractive.com.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -1856,7 +1876,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>39978</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>https://rockawaywishcms-local.tiradointeractive.com</IISUrl>
+          <IISUrl>https://interactivemembership-cms-local.tiradointeractive.com</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
