--- a/source/RockawayWishCMS.Web/Web.config
+++ b/source/RockawayWishCMS.Web/Web.config
@@ -56,7 +56,7 @@
   </appSettings>
   <connectionStrings>
     <remove name="umbracoDbDSN"/>
-    <add name="umbracoDbDSN" connectionString="server=.\SQL2K8;database=InteractiveMembershipCMS;user id=interactivemembershipcms_user;password='interactivemembershipcms_user**'" providerName="System.Data.SqlClient"/>
+    <add name="umbracoDbDSN" connectionString="server=.\SQL2K8;database=RockawayWishCMS;user id=rockawaywishcms_user;password='rockawaywishcms_user**'" providerName="System.Data.SqlClient"/>
     <!-- Important: If you're upgrading Umbraco, do not clear the connection string / provider name during your web.config merge. -->
   </connectionStrings>
   <system.data>
