--- a/source/RockawayWish.Data.Tests/App.Config
+++ b/source/RockawayWish.Data.Tests/App.Config
@@ -6,7 +6,7 @@
     <add key="Site-Enable-SSL" value="true" />
     <add key="Site-Enable-Cache" value="true" />
     <add key="Site-Title" value="Wish of Rockaway" />
-    <add key="Site-Application-Id" value="13A6F14D-7B2B-4266-AB7D-A11DF2AFEB07" />
+    <add key="Site-Application-Id" value="47CE1C5E-17EA-4F80-8632-C1CF11216F11" />
     <add key="Site-Url" value="https://rockawaywish-local.tiradointeractive.com" />
 
     <!-- Site API Settings -->
@@ -122,7 +122,7 @@
     <add key="Site-Smtp-User-Name" value="info@rockawaywish.org" />
     <add key="Site-Smtp-Password" value="Rockaway11694*" />
     <add key="Site-Smtp-Port" value="587" />
-    <add key="Site-Smtp-From-Address" value="info@rockawaywish.or" />
+    <add key="Site-Smtp-From-Address" value="info@rockawaywish.org" />
     <add key="Site-Smtp-From-Name" value="WISH of Rockaway" />
     <add key="Site-Smtp-Enable-SSL" value="true" />
     <add key="Site-Smtp-Use-Default-Credentials" value="false" />
@@ -174,7 +174,7 @@
     <!-- Membership Api Settings -->
     <add key="Membership-Api-Url" value="https://wish-membership-api.tiradointeractive.com" />
     <add key="Membership-Api-Key-Enable" value="true" />
-    <add key="Membership-Api-Key" value="asd*2lH@klj234^2902f4RjSSP2K2Ewk3jk23" />
+    <add key="Membership-Api-Key" value="8cb211c0-5e23-4aa8-9d96-85b39c6f7620" />
 
     <!-- Membership Admin Settings -->
     <add key="Membership-Admin-Url" value="https://interactivemembership.tiradointeractive.com" />
@@ -185,11 +185,11 @@
     <add key="Membership-Admin-Application-Id" value="02772dae-371e-40e8-b8fc-afed0cde9c24" />
 
     <!-- Unit Test Settings-->
-    <add key="Test-Application-Id" value="41cb7e67-f391-47b2-978e-740e41eb69dd" />
+    <add key="Test-Application-Id" value="47CE1C5E-17EA-4F80-8632-C1CF11216F11" />
     <add key="Test-Application-Title" value="Interactive Games" />
     <add key="Test-Application-Title-Updated" value="41CB7E67-F391-47B2-978E-740E41EB69DD" />
     <add key="Test-User-Application-Id" value="05AE63DB-3F88-4A5B-8BF2-D3AE86C684C1" />
-    <add key="Test-User-Id" value="42A8BDF0-128C-40CD-A60A-10CC6C4DB1A3" />
+    <add key="Test-User-Id" value="550C6E48-72CB-4543-A087-7AD48B493D55" />
     <add key="Test-User-Id-Updated" value="05AE63DB-3F88-4A5B-8BF2-D3AE86C684C1" />
     <add key="Test-User-Token-Id" value="ECEA6EDD-0246-4DA9-9CDC-99495F909A11" />
     <add key="Test-User-First-Name" value="Richard" />
@@ -223,7 +223,7 @@
     <add key="Test-User-Is-Admin" value="false" />
     <add key="Test-User-Is-Super-Admin" value="false" />
     <add key="Test-User-Is-Donator" value="false" />
-    <add key="Test-User-Activation-Access-Token" value="CEAB104C-C0EF-4335-8235-5EBB99E6364F" />
+    <add key="Test-User-Activation-Access-Token" value="65E90098-E3F8-4929-A4F4-44D64CC1F0D2" />
     <add key="Test-User-Reset-Password-Access-Token" value="08BA12FF-0A71-465F-BDED-D07BC0FB99C0" />
   </appSettings>
 
