--- a/source/RockawayWish.Web/Web.config
+++ b/source/RockawayWish.Web/Web.config
@@ -1,43 +1,89 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<!--
-  For more information on how to configure your ASP.NET application, please visit
-  https://go.microsoft.com/fwlink/?LinkId=301880
-  -->
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <appSettings>
-    <add key="webpages:Version" value="3.0.0.0"/>
-    <add key="webpages:Enabled" value="false"/>
-    <add key="ClientValidationEnabled" value="true"/>
-    <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
-  </appSettings>
+  <!-- App Settings Settings -->
+  <appSettings configSource="Config\app.config"/>
+
+  <!-- System.Web Settings -->
   <system.web>
+
+    <!-- Compilation-->
     <compilation debug="true" targetFramework="4.5"/>
-    <httpRuntime targetFramework="4.5"/>
+
+    <!-- Framework security fix for /nul directory -->
+    <!-- Allow zombie DOS names to be captured by ASP.NET (/con, /com1, /lpt1, /aux, /prt, /nul, etc) -->
+    <httpRuntime targetFramework="4.5" relaxedUrlToFileSystemMapping="true" enableVersionHeader="false"/>
+
+    <!-- Set Http Cookies -->
+    <httpCookies httpOnlyCookies="true" requireSSL="true"/>
+
+    <!-- Set Custom Errors -->
+    <customErrors mode="Off" defaultRedirect="~/Error/PageNotFound">
+      <error statusCode="404" redirect="~/Error/PageNotFound"/>
+    </customErrors>
+
+    <!-- Set Forms Authentication -->
+    <authentication mode="Forms">
+      <forms protection="All" requireSSL="true" defaultUrl="~/" loginUrl="~/users/sign/in" cookieless="UseCookies" slidingExpiration="true" timeout="4320"/>
+    </authentication>
+
   </system.web>
+
+  <!-- System.WebServer Settings -->
+  <system.webServer>
+
+    <validation validateIntegratedModeConfiguration="false"/>
+
+    <modules runAllManagedModulesForAllRequests="true"/>
+
+    <staticContent>
+      <remove fileExtension=".webm"/>
+      <mimeMap fileExtension=".webm" mimeType="video/webm"/>
+      <remove fileExtension=".mp4"/>
+      <mimeMap fileExtension=".mp4" mimeType="video/mp4"/>
+      <remove fileExtension=".woff"/>
+      <mimeMap fileExtension=".woff" mimeType="application/x-font-woff"/>
+      <remove fileExtension=".woff2"/>
+      <mimeMap fileExtension=".woff2" mimeType="application/x-font-woff"/>
+      <remove fileExtension=".json"/>
+      <mimeMap fileExtension=".json" mimeType="application/json"/>
+    </staticContent>
+    
+
+    <httpProtocol>
+      <customHeaders>
+        <add name="X-Frame-Options" value="SAMEORIGIN"/>
+        <add name="Strict-Transport-Security" value="max-age=16070400; includeSubDomains"/>
+      </customHeaders>
+    </httpProtocol>
+
+    <httpErrors errorMode="Custom">
+      <!-- Catch IIS 404 error due to paths that exist but shouldn't be served (e.g. /controllers, /global.asax) or IIS request filtering (e.g. bin, web.config, app_code, app_globalresources, app_localresources, app_webreferences, app_data, app_browsers) -->
+      <remove statusCode="404" subStatusCode="-1"/>
+      <error statusCode="404" subStatusCode="-1" path="/Error/PageNotFound" responseMode="ExecuteURL"/>
+    </httpErrors>
+
+    <!-- url redirects -->
+    <!--<rewrite>
+      <rules configSource="Config\rewriteRules.config"/>
+    </rewrite>-->
+
+  </system.webServer>
+
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35"/>
-        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0"/>
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35"/>
-        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0"/>
+        <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0"/>
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35"/>
-        <bindingRedirect oldVersion="1.0.0.0-5.2.7.0" newVersion="5.2.7.0"/>
+        <bindingRedirect oldVersion="0.0.0.0-5.2.7.0" newVersion="5.2.7.0"/>
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35"/>
+        <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0"/>
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-  <system.codedom>
-    <compilers>
-      <compiler language="c#;cs;csharp" extension=".cs"
-        type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
-        warningLevel="4" compilerOptions="/langversion:6 /nowarn:1659;1699;1701"/>
-      <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb"
-        type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
-        warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
-    </compilers>
-  </system.codedom>
+
 </configuration>
